crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__modifiers-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"unsafe silent {}\"))"
---
[
    (
        Statement(
            (
                Block(
                    (
                        Block(
                            [
                                (
                                    Unsafe,
                                    0..6,
                                ),
                                (
                                    Silent,
                                    7..13,
                                ),
                            ],
                            [],
                        ),
                        0..16,
                    ),
                ),
                0..16,
            ),
        ),
        0..16,
    ),
]
