crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__modifiers-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"unsafe silent $command$\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [
                                (
                                    Unsafe,
                                    0..6,
                                ),
                                (
                                    Silent,
                                    7..13,
                                ),
                            ],
                            [
                                (
                                    Text(
                                        "$",
                                    ),
                                    14..15,
                                ),
                                (
                                    Text(
                                        "command",
                                    ),
                                    15..22,
                                ),
                                (
                                    Text(
                                        "$",
                                    ),
                                    22..23,
                                ),
                            ],
                            None,
                        ),
                        0..23,
                    ),
                ),
                0..23,
            ),
        ),
        0..23,
    ),
]
