crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__modifiers-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"unsafe silent foo()\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        FunctionInvocation(
                            [
                                (
                                    Unsafe,
                                    0..6,
                                ),
                                (
                                    Silent,
                                    7..13,
                                ),
                            ],
                            (
                                "foo",
                                14..17,
                            ),
                            [],
                            None,
                        ),
                        0..19,
                    ),
                ),
                0..19,
            ),
        ),
        0..19,
    ),
]
