crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__modifiers-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(\"unsafe silent $command$\")"
---
[
    (
        Statement(
            (
                CommandModifier(
                    (
                        Unsafe,
                        0..6,
                    ),
                ),
                0..6,
            ),
        ),
        0..6,
    ),
    (
        Statement(
            (
                CommandModifier(
                    (
                        Silent,
                        7..13,
                    ),
                ),
                7..13,
            ),
        ),
        7..13,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [
                                (
                                    Text(
                                        "command",
                                    ),
                                    15..22,
                                ),
                            ],
                            None,
                        ),
                        14..23,
                    ),
                ),
                14..23,
            ),
        ),
        14..23,
    ),
]
